[gd_scene load_steps=6 format=3 uid="uid://btml0og1jpu1e"]

[ext_resource type="Script" path="res://examples/creverter/basic_example/example.gd" id="1_rhywv"]
[ext_resource type="Script" path="res://examples/creverter/basic_example/field.gd" id="1_yfit2"]
[ext_resource type="PackedScene" uid="uid://4rgmcqkp1cx6" path="res://examples/creverter/basic_example/ball.tscn" id="2_2j10n"]
[ext_resource type="Script" path="res://examples/creverter/basic_example/control_board.gd" id="3_gkcen"]
[ext_resource type="Script" path="res://examples/creverter/basic_example/diagram.gd" id="5_7isyh"]

[node name="Top" type="Node"]
script = ExtResource("1_rhywv")

[node name="Field" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("1_yfit2")

[node name="Ball1" parent="Field" instance=ExtResource("2_2j10n")]

[node name="Ball2" parent="Field" instance=ExtResource("2_2j10n")]
position = Vector2(404, 202)

[node name="Ball3" parent="Field" instance=ExtResource("2_2j10n")]
position = Vector2(578, 158)

[node name="ControlBoard" type="Panel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 250)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("3_gkcen")

[node name="VBoxContainer" type="VBoxContainer" parent="ControlBoard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Row1" type="HBoxContainer" parent="ControlBoard/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CommitButton" type="Button" parent="ControlBoard/VBoxContainer/Row1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Commit"

[node name="RevertButton" type="Button" parent="ControlBoard/VBoxContainer/Row1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Revert"

[node name="UndoButton" type="Button" parent="ControlBoard/VBoxContainer/Row1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Undo"

[node name="RedoButton" type="Button" parent="ControlBoard/VBoxContainer/Row1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Redo"

[node name="LoadOldestButton" type="Button" parent="ControlBoard/VBoxContainer/Row1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Load Oldest"

[node name="LoadNewestButton" type="Button" parent="ControlBoard/VBoxContainer/Row1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Load Newest"

[node name="ClearButton" type="Button" parent="ControlBoard/VBoxContainer/Row1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Clear History"

[node name="Row2" type="HBoxContainer" parent="ControlBoard/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="ControlBoard/VBoxContainer/Row2"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "Commit Tag:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveButton1" type="Button" parent="ControlBoard/VBoxContainer/Row2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 11
text = "1"

[node name="SaveButton2" type="Button" parent="ControlBoard/VBoxContainer/Row2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 11
text = "2"

[node name="SaveButton3" type="Button" parent="ControlBoard/VBoxContainer/Row2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 11
text = "3"

[node name="SaveButton4" type="Button" parent="ControlBoard/VBoxContainer/Row2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 11
text = "4"

[node name="SaveButton5" type="Button" parent="ControlBoard/VBoxContainer/Row2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 11
text = "5"

[node name="SaveButton6" type="Button" parent="ControlBoard/VBoxContainer/Row2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 11
text = "6"

[node name="SaveButton7" type="Button" parent="ControlBoard/VBoxContainer/Row2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 11
text = "7"

[node name="SaveButton8" type="Button" parent="ControlBoard/VBoxContainer/Row2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 11
text = "8"

[node name="SaveButton9" type="Button" parent="ControlBoard/VBoxContainer/Row2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 11
text = "9"

[node name="Row3" type="HBoxContainer" parent="ControlBoard/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="ControlBoard/VBoxContainer/Row3"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "Load Tag:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadButton1" type="Button" parent="ControlBoard/VBoxContainer/Row3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 11
text = "1"

[node name="LoadButton2" type="Button" parent="ControlBoard/VBoxContainer/Row3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 11
text = "2"

[node name="LoadButton3" type="Button" parent="ControlBoard/VBoxContainer/Row3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 11
text = "3"

[node name="LoadButton4" type="Button" parent="ControlBoard/VBoxContainer/Row3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 11
text = "4"

[node name="LoadButton5" type="Button" parent="ControlBoard/VBoxContainer/Row3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 11
text = "5"

[node name="LoadButton6" type="Button" parent="ControlBoard/VBoxContainer/Row3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 11
text = "6"

[node name="LoadButton7" type="Button" parent="ControlBoard/VBoxContainer/Row3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 11
text = "7"

[node name="LoadButton8" type="Button" parent="ControlBoard/VBoxContainer/Row3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 11
text = "8"

[node name="LoadButton9" type="Button" parent="ControlBoard/VBoxContainer/Row3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 11
text = "9"

[node name="Diagram" type="Control" parent="ControlBoard/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("5_7isyh")
